--- a/Index.html
+++ b/Index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Configuracion Github</title>
+
+    <title>Diseño de Sitios Web</title>
+
 </head>
+<h1>OVI DISEÑO DE SITIOS WEB</h1>
 <body>
-    <h1>Nombre: Olbany andres torres </h1>
-    <h1>Programa: Ingenieria de sistemas </h1>
-    <h1>Fecha de Creacion: 05/09/2020 </h1>
-    <h1>Datos de Contacto: 3173420100 skype: olbanymetal2 </h1>
+    <nav>
+        <ul>
+            <li><a href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\plannig.html">Borrador</li></a>
+        </ul>
+    </nav>   
    
 </body>
 </html>
