--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<OCTYPE html>
 
 <html lang="en">
 
@@ -6,17 +6,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <title>Diseño de Sitios Web</title>
 
 </head>
-<h1>OVI DISEÑO DE SITIOS WEB</h1>
+
+
+
 <body>
-    <nav>
-        <ul>
-            <li><a href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\plannig.html">Borrador</li></a>
-        </ul>
-    </nav>   
+
+<h1>OVI DISEÑO DE SITIOS WEB</h1>
+	
+ <div class="link1">
+
+	<a href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\plannig.html">Click aqui...</a>>
+
+	<img src="img/laptop.gif" width="880" height="440">
+
+</div> 
    
 </body>
 </html>
