--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-﻿<OCTYPE html>
+<OCTYPE html>
 
 <html lang="en">
 
@@ -18,9 +18,9 @@
 
 <h1>OVI DISEÑO DE SITIOS WEB</h1>
 	
- <div class="link1">
+ <div class="link11">
 
-	<a href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\plannig.html">Click aqui...</a>>
+	<a href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\plannig.html">Click aqui paea continuar..</a>>
 
 	<img src="img/laptop.gif" width="880" height="440">
 
