--- a/plannig.html
+++ b/plannig.html
@@ -42,7 +42,8 @@
   <p><ul><li>Aprender Html5.
 
 
-
+<h4>Borrador</h4>
+<p>Buenas Dias instructor y compañeros esta es una pequeña intruduccion al tema que veremos , las propiedades css o hojas de estilos fueron creadas en el año 1970 puesto que se veian en la necesidad de darle tanto orden y calidad visual a los documentos electronicos que se creaban en su momento Css significa "Cascade Style Sheet"....</p>
 
 <h4>Materiales a usar</h4>
 
