--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	
  <div class="link11">
 
-	<a href="plannig.html">Click aqui paea continuar..</a>>
+	<a href="https://github.com/gamotliss/DSW-OlbanyTorres/blob/master/plannig.html">Click aqui paea continuar..</a>>
 
 	<img src="img/laptop.gif" width="880" height="440">
 
