--- a/plannig.html
+++ b/plannig.html
@@ -15,19 +15,44 @@
 
 
 <body>
+  <header class="header">
+  <div class="Logos2">
+    <img src="img/logoUNAD-HD.jpg" width="270" height="65">
+    </div>
 
+    <nav id="nav-h" class="nav" >
+      <!-----------ESTRUCTURA DEL MENU----------------->
+      <ul class="menu">
+         <h1> <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\plannig.html">Inicio</a></li>
+          <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\concepts.html">Conceptos</a></li>
+          <li class="menu__item"><a class="menu__link" href="">Recursos</a></li>
+          <li class="menu__item"><a class="menu__link" href="">Auto Evaluacion</a></li>
+          <li class="menu__item"><a class="menu__link" href="">Autor</a></li>
+          </h1>
+      </ul>
+      
+
+  </nav>
+  </header>
+  
 <div class="Contenedor"> 
 
 <h1>
-	Propiedades básicas de CSS, Display: inline, block,
-	inline-block
+	Diseño de Sitios Web
 </h1>
+</div>
 
-<h3>
-	Objetivos Generales
-</h3>	
+<div class="ObjetivosG">
 
-<p>El obgetivo general del curso es aprender las bases y principales conceptos del desarrollo web e adquirir unas bases solidas para porteriormente<br> desarrollar habilidades de programacion y diseño web que seran de gran ayuda en nuestro desarrollo profesional</p>
+  <h3>
+    Objetivos Generales
+  </h3>	
+  
+  <p>El obgetivo general del curso es aprender las bases y principales conceptos del desarrollo web e adquirir unas bases solidas para porteriormente<br> desarrollar habilidades de programacion y diseño web que seran de gran ayuda en nuestro desarrollo profesional</p>
+  
+</div>
+
+<div class="ObjetivosE">
 
   <h4>Objetivos especificos</h4>
 
@@ -41,37 +66,44 @@
 
   <p><ul><li>Aprender Html5.
 
-
-<h4>Borrador</h4>
-<p>Buenas Dias instructor y compañeros esta es una pequeña intruduccion al tema que veremos , las propiedades css o hojas de estilos fueron creadas en el año 1970 puesto que se veian en la necesidad de darle tanto orden y calidad visual a los documentos electronicos que se creaban en su momento Css significa "Cascade Style Sheet"....</p>
-
-<h4>Materiales a usar</h4>
-
-<ul>
- <a href="https://www.sublimetext.com/">Editor de Codigo Sublime Text</a>
-</ul>
-
-<ul>
- <a href="https://www.eniun.com/resumen-tabla-propiedades-css-valores/">Propiedades Generales Css</a>
-</ul>
-<ul>
- <a href="https://www.campusmvp.es/recursos/post/Que-diferencias-hay-entre-display-block-inline-e-inline-block-en-CSS.aspx">Propiedades Especificas  Del tema seleccionado </a>
-
-</ul>
-<ul>
-  <a href="https://pencil.evolus.vn/">Sofware de Maquetación </a>
-<ul>
- <h3>Maquetación</h3>
+</div>
+ 
+<div class="Intro">
+  
+  <h4>Borrador</h4>
+  <p>Buenas Dias instructor y compañeros esta es una pequeña intruduccion al tema que veremos , las propiedades css o hojas de estilos fueron creadas en el año 1970 puesto que se veian en la necesidad de darle tanto orden y calidad visual a los documentos electronicos que se creaban en su momento Css significa "Cascade Style Sheet"....</p>
+  
+  <h4>Materiales a usar</h4>
+  
+  <ul>
+   <a href="https://www.sublimetext.com/">Editor de Codigo Sublime Text</a>
+  </ul>
+  
+  <ul>
+   <a href="https://www.eniun.com/resumen-tabla-propiedades-css-valores/">Propiedades Generales Css</a>
+  </ul>
+  <ul>
+   <a href="https://www.campusmvp.es/recursos/post/Que-diferencias-hay-entre-display-block-inline-e-inline-block-en-CSS.aspx">Propiedades Especificas  Del tema seleccionado </a>
+  
+  </ul>
+  <ul>
+    <a href="https://pencil.evolus.vn/">Sofware de Maquetación </a>
+  <ul>
+   <h3>Maquetación</h3>
+  
+  
+  
+  <img src="img/Diseno1.png" width="894" height="585" class="CentrarImg">
+  
+  <img src="img/Diseno2.png" width="894" height="585" class="CentrarImg">
+  
+  <img src="img/Diseno3.png" width="894" height="585" class="CentrarImg">
+  
+  <img src="img/Diseno4.png" width="894" height="585" class="CentrarImg">
 
 </div>
 
-<img src="img/Diseno1.png" width="894" height="585" class="CentrarImg">
 
-<img src="img/Diseno2.png" width="894" height="585" class="CentrarImg">
-
-<img src="img/Diseno3.png" width="894" height="585" class="CentrarImg">
-
-<img src="img/Diseno4.png" width="894" height="585" class="CentrarImg">
 
 </body>
 </html>
