--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
 
 
 
-<body>
+<body> 
+
+<div class="Logos1">
+<img src="img/LogoUnad.PNG" width="100%" height="161">
+</div>
+
 
 <h1>OVI DISEÑO DE SITIOS WEB</h1>
 	
- <div class="link11">
-
-	<a href=plannig.html>Click aqui paea continuar..</a>>
-
-	<img src="img/laptop.gif" width="880" height="440">
-
+<div class="link11">
+<a href=plannig.html>Click aqui paea continuar..</a>
 </div> 
-   
+
+
+
 </body>
 </html>
