--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <h1>OVI DISEÑO DE SITIOS WEB</h1>
 	
 <div class="link11">
-<a href=plannig.html>Click aqui paea continuar..</a>
+<a href=plannig.html>Click aqui para continuar..</a>
 </div> 
 
 
