--- a/plannig.html
+++ b/plannig.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/style2.css">
+    <link rel="stylesheet" type="text/css" href="css/Planning.css">
 
     <title>Diseño de Sitios Web</title>
 
@@ -48,7 +48,7 @@
     Objetivos Generales
   </h3>	
   
-  <p>El obgetivo general del curso es aprender las bases y principales conceptos del desarrollo web e adquirir unas bases solidas para porteriormente<br> desarrollar habilidades de programacion y diseño web que seran de gran ayuda en nuestro desarrollo profesional</p>
+  <p>El obgetivo general del curso es aprender las bases y principales conceptos del desarrollo web e adquirir unas bases solidas para porteriormente desarrollar habilidades de programacion y diseño web que seran de gran ayuda en nuestro desarrollo profesional</p>
   
 </div>
 
