--- a/plannig.html
+++ b/plannig.html
@@ -26,8 +26,8 @@
          <h1> <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\plannig.html">Inicio</a></li>
           <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\concepts.html">Conceptos</a></li>
           <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\resources.html">Recursos</a></li>
-          <li class="menu__item"><a class="menu__link" href="">Auto Evaluacion</a></li>
-          <li class="menu__item"><a class="menu__link" href="">Autor</a></li>
+          <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\autoEvaluacion.html">Auto Evaluacion</a></li>
+          <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\autor.html">Autor</a></li>
           </h1>
       </ul>
       
