--- a/autor.html
+++ b/autor.html
@@ -1,6 +1,6 @@
 <OCTYPE html>
 
-    <html lang="es">
+    <html lang="en">
     
     <head>
         <meta charset="UTF-8">
@@ -25,7 +25,7 @@
              <h1> <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\plannig.html">Inicio</a></li>
               <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\concepts.html">Conceptos</a></li>
               <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\resources.html">Recursos</a></li>
-              <li class="menu__item"><a class="menu__link" href="">Auto Evaluacion</a></li>
+              <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\autoEvaluacion.html">Auto Evaluacion</a></li>
               <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\autor.html">Autor</a></li>
               </h1>
           </ul>
