--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body> 
 
 <div class="Logos1">
-<img src="img/LogoUnad.PNG" width="100%" height="161">
+    <a href="https://www.unad.edu.co/"><img src="img/LogoUnad.PNG" width="100%" height="161">
 </div>
 
 
