--- a/plannig.html
+++ b/plannig.html
@@ -17,19 +17,19 @@
 <body>
   <header class="header">
   <div class="Logos2">
-    <img src="img/logoUNAD-HD.jpg" width="270" height="65">
+    <a href="https://www.unad.edu.co/"></a> <img src="img/logoUNAD-HD.jpg" width="270" height="65">
     </div>
 
     <nav id="nav-h" class="nav" >
       <!-----------ESTRUCTURA DEL MENU----------------->
       <ul class="menu">
-         <h1> <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\plannig.html">Inicio</a></li>
-          <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\concepts.html">Conceptos</a></li>
-          <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\resources.html">Recursos</a></li>
-          <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\autoEvaluacion.html">Auto Evaluacion</a></li>
-          <li class="menu__item"><a class="menu__link" href="C:\Users\olbany\Documents\DSW-OlbanyTorres\DSW-OlbanyTorres\autor.html">Autor</a></li>
-          </h1>
-      </ul>
+        <h1> <li class="menu__item"><a class="menu__link" href="plannig.html">Inicio</a></li>
+         <li class="menu__item"><a class="menu__link" href="concepts.html">Conceptos</a></li>
+         <li class="menu__item"><a class="menu__link" href="resources.html">Recursos</a></li>
+         <li class="menu__item"><a class="menu__link" href="autoEvaluacion.html">Auto Evaluacion</a></li>
+         <li class="menu__item"><a class="menu__link" href="autor.html">Autor</a></li>
+         </h1>
+     </ul>
       
 
   </nav>
