--- a/autoEvaluacion.html
+++ b/autoEvaluacion.html
@@ -54,7 +54,7 @@
    <h3>Resultado de AutoEvaluacion del sitio</h3>
     
   
-   <iframe src="Matriz-EvalSitefINAL.pdf" width="100%" height="680px"></iframe>
+   <iframe src="file/Matriz-EvalSitefINAL.pdf" width="100%" height="680px"></iframe>
 </div>
 </body>
 
