--- a/autoEvaluacion.html
+++ b/autoEvaluacion.html
@@ -54,7 +54,7 @@
    <h3>Resultado de AutoEvaluacion del sitio</h3>
     
   
-   <iframe src="https://smallpdf.com/shared#st=13ef786b-a2e7-4412-b8e3-c6cac5221369&fn=Matriz-EvalSitefINAL.pdf&ct=1606506557965&tl=share-document&rf=link" width="100%" height="680px"></iframe>
+   <iframe src="file/Matriz-EvalSitefINAL.pdf" width="100%" height="680px"></iframe>
 </div>
 </body>
 
